change atomuhr to github; tune CV

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>    
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-info btn-block btn-lg" target="_blank" href="atomuhr/">Atomuhr (Chello)</a>
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="https://sky-flyer.github.io/demomaps/atomuhr/">Atomuhr (Github)</a>
         <a class="btn btn-info btn-block btn-lg" target="_blank" href="https://uhr.ptb.de/">Atomuhr PTB</a>
       </div>
     </div>
