--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
     </div>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="pflanzen/">Pflanzen-DB</a>
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="https://pflanzendb-94c6.restdb.io/home/">Pflanzen-DB Backend</a>
+      </div>
+    </div>
+    <div class="row margin-bottom-xs">
+      <div class="col-sm-12 btn-group btn-group-justified">
         <a class="btn btn-info btn-block btn-lg" target="_blank" href="bahnhofsuhr/">Bahnhofsuhr</a>
         <a class="btn btn-info btn-block btn-lg" target="_blank" href="digitaluhr/">Digitaluhr</a>
       </div>
