"Version 1.0" der pflanzen-db mit online-db  (restio.io) und bilder, tabelle und such-dropdown

--- a/pflanzen/index.html
+++ b/pflanzen/index.html
@@ -39,6 +39,23 @@
 							<th>Bild</th>
 						</tr>
 					</thead>
+					<tfoot>
+						<tr>
+							<th>ID</th>
+							<th>Name</th>
+							<th>Name (latein)</th>
+							<th>Familienname</th>
+							<th>Familienname (latein)</th>
+							<th>Spreitenrand</th>
+							<th>Blattspreite</th>
+							<th>Stammumfang</th>
+							<th>Alter</th>
+							<th>Ansprüche</th>
+							<th>Standort</th>
+							<th>Frucht</th>
+							<th>Bild</th>
+						</tr>
+					</tfoot>
 				</table>
 				
 			</div>
