--- a/pflanzen/index.html
+++ b/pflanzen/index.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8">
 	    <title>Pflanzen DB</title>
 		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
+		<!--
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+			<link href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" rel="stylesheet" >
+		-->
 		<link href="css/bootstrap.min.css" rel="stylesheet" >
 		<link href="css/jquery.dataTables.min.css" rel="stylesheet" >
-		<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
 		<style>
 		</style>
 		<script src="./js/jquery-3.3.1.js" type="text/javascript"></script>
