add pg-image, remove scroll-y

--- a/pflanzen/index.html
+++ b/pflanzen/index.html
@@ -18,7 +18,7 @@
     </head>
 	<body onload="">
 		<div>
-			<div class="jumbotron"> 
+			<div class="jumbotron" style="color:#004400; background-color:#C8FFC8; background-image: url('images/pflanzen-bg.jpg'); background-size: cover;">
 				<div class="container text-left">
 				<h1>Pflanzen Datenbank</h1>
 				</div>
