--- a/pflanzen/index.html
+++ b/pflanzen/index.html
@@ -10,10 +10,12 @@
 		-->
 		<link href="css/bootstrap.min.css" rel="stylesheet" >
 		<link href="css/jquery.dataTables.min.css" rel="stylesheet" >
-		<style>
-		</style>
+		<link href="css/responsive.dataTables.min.css" rel="stylesheet" >
+
 		<script src="./js/jquery-3.3.1.js" type="text/javascript"></script>
 		<script src="./js/jquery.dataTables.min.js" type="text/javascript"></script>
+		<script src="./js/dataTables.responsive.min.js" type="text/javascript"></script>
+		<script src="./js/buttons.colVis.min.js" type="text/javascript"></script>
 		<script src="./pflanzen.js" type="text/javascript"></script>
     </head>
 	<body onload="">
@@ -23,7 +25,8 @@
 				<h1>Pflanzen Datenbank</h1>
 				</div>
 			</div>
-			<div class="container" style="width:95%">
+			<div class="container" style="width:98%">
+
 				<table id="tblpflanzen" class="display" style="width:100%">
 					<thead>
 						<tr>
