neue spalten (noch ausgeblendet)

--- a/pflanzen/index.html
+++ b/pflanzen/index.html
@@ -40,8 +40,13 @@
 							<th>Stammumfang</th>
 							<th>Alter</th>
 							<th>Ansprüche</th>
+							<!-- <th>Boden Ansprüche</th> -->
 							<th>Standort</th>
+							<!-- <th>Max Höhe</th> -->
 							<th>Frucht</th>
+							<!-- <th>Blühzeit</th>
+							<th>Heilkräfte</th>
+							<th>Sonstiges</th> -->
 							<th>Bild</th>
 						</tr>
 					</thead>
@@ -57,8 +62,13 @@
 							<th>Stammumfang</th>
 							<th>Alter</th>
 							<th>Ansprüche</th>
+							<!-- <th>Boden Ansprüche</th> -->
 							<th>Standort</th>
+							<!-- <th>Max Höhe</th> -->
 							<th>Frucht</th>
+							<!-- <th>Blühzeit</th>
+							<th>Heilkräfte</th>
+							<th>Sonstiges</th> -->
 							<th>Bild</th>
 						</tr>
 					</tfoot>
