add new features for pflanzen and add webapp features

--- a/pflanzen/index.html
+++ b/pflanzen/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
 	    <title>Pflanzen DB</title>
 		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<!--
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 			<link href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" rel="stylesheet" >
@@ -40,13 +42,13 @@
 							<th>Stammumfang</th>
 							<th>Alter</th>
 							<th>Ansprüche</th>
-							<!-- <th>Boden Ansprüche</th> -->
+							 <th>Boden Ansprüche</th>
 							<th>Standort</th>
-							<!-- <th>Max Höhe</th> -->
+							 <th>Max Höhe</th>
 							<th>Frucht</th>
-							<!-- <th>Blühzeit</th>
+							<th>Blühzeit</th>
 							<th>Heilkräfte</th>
-							<th>Sonstiges</th> -->
+							<th>Sonstiges</th>
 							<th>Bild</th>
 						</tr>
 					</thead>
@@ -62,13 +64,13 @@
 							<th>Stammumfang</th>
 							<th>Alter</th>
 							<th>Ansprüche</th>
-							<!-- <th>Boden Ansprüche</th> -->
+							 <th>Boden Ansprüche</th>
 							<th>Standort</th>
-							<!-- <th>Max Höhe</th> -->
+							 <th>Max Höhe</th>
 							<th>Frucht</th>
-							<!-- <th>Blühzeit</th>
+							<th>Blühzeit</th>
 							<th>Heilkräfte</th>
-							<th>Sonstiges</th> -->
+							<th>Sonstiges</th>
 							<th>Bild</th>
 						</tr>
 					</tfoot>
