add webapp capable tag

--- a/chucknorris/index.html
+++ b/chucknorris/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>Angular Master Class Exercise</title>
+		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+    <title>Chuck Norris Witze Datenbank</title>
     <link rel="stylesheet" href="./assets/css/all.css">
     <meta name="mobile-web-app-capable" content="yes">
     <script src="./assets/js/angular/angular.js"></script>
