--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <title>Andis Seite</title>
   <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
-  <link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+<link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
   <script>
@@ -195,7 +197,22 @@
             <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://banking.bankaustria.at">Bankaustria 24You</a>
         </div>
     </div>
+    
     <hr>
+
+    <div class="row margin-bottom-xs">
+      <div class="col-sm-12 btn-group btn-group-justified">
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://orf.at/corona/stories/3157533">ORF Corona Daten</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://info.gesundheitsministerium.at/">Österreich Covid19 Dashboard</a>
+        </div>
+      </div>
+      <div class="row margin-bottom-xs">
+        <div class="col-sm-12 btn-group btn-group-justified">
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Internationales Covid19 Dashboard</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://docs.google.com/spreadsheets/d/1PHThvZT-DDwd18op8MUde_EQpVASE4R74A_qzW2OfH8/htmlview">Covid19 Excel</a>
+      </div>
+  </div>
+  <hr>
     
     <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://9gag.com">9 Gag</a>
     <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://de.webfail.at/">Webfail</a>
