--- a/zapfen/index.html
+++ b/zapfen/index.html
@@ -5,7 +5,7 @@
 	    <title>Zapfenrechner</title>
 		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 		<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
 		<style>
