--- a/atomuhr/index.html
+++ b/atomuhr/index.html
@@ -9,7 +9,10 @@
   <meta charset="UTF-8">
   <script src="jquery.js"></script>
   <title>PTB Uhr</title>
- </head>
+  <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+</head>
  <body>
   <noscript><span style="color:red;font-size:2em;">Die Uhr nur tickt mit Javascript!</span></noscript>
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 200 200" baseProfile="full" style="display:block;margin-left:auto;margin-right:auto;min-width:200px;height:90vh;max-width:90vw;">
