--- a/multimap/index.html
+++ b/multimap/index.html
@@ -2,8 +2,10 @@
   <head>
     <meta charset="utf-8">
 	<title>Multimap (20180306-1250)</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
-	<!-- favicon -->
+	<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 	<link rel="apple-touch-icon" href="favicon.png"/>
