adapt webapp status bar to white

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Andis Seite</title>
   <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="white">
 <link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
