--- a/atomuhr/index.html
+++ b/atomuhr/index.html
@@ -11,7 +11,7 @@
   <title>PTB Uhr</title>
   <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="white">
 </head>
  <body>
   <noscript><span style="color:red;font-size:2em;">Die Uhr nur tickt mit Javascript!</span></noscript>
