--- a/chucknorris/index.html
+++ b/chucknorris/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+		<meta name="apple-mobile-web-app-status-bar-style" content="white">
     <title>Chuck Norris Witze Datenbank</title>
     <link rel="stylesheet" href="./assets/css/all.css">
     <meta name="mobile-web-app-capable" content="yes">
