--- a/multimap/index.html
+++ b/multimap/index.html
@@ -4,7 +4,7 @@
 	<title>Multimap (20180306-1250)</title>
 	<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="white">
 <!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
