new plant-html data-table; mobile web app meta tags

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.meteoblue.com/de/wetter/vorhersage/meteogramfive/unter-sankt-veit_%c3%96sterreich_2601119">Meteogramm Wien</a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.meteoblue.com/de/wetter/woche/unter-sankt-veit_%c3%96sterreich_2601119">Meteoblue Wien</a>
         <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.meteoblue.com/de/wetter/vorhersage/14-tage/unter-sankt-veit_%c3%96sterreich_2601119">14 Tage Wien</a>
         <a class="btn btn-primary btn-block btn-lg margin-bootom-xs" target="_blank" href="https://www.meteoblue.com/de/wetter/vorhersage/multimodel/unter-sankt-veit_Österreich_2601119">Multimodel Wien</a>
       </div>
@@ -185,7 +185,7 @@
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
         <a class="btn btn-primary btn-block btn-lg margin-bootom-xs" target="_blank" href="https://www.windy.com/48.185/16.299?radar,48.123,16.317,11,m:eZtagCk,p:off">Windy.com Wien</a>
-        <a class="btn btn-primary btn-block btn-lg margin-bootom-xs" target="_blank" href="https://darksky.net/forecast/48.188,16.272/si24/de">Darksky Wien</a>
+        <a class="btn btn-primary btn-block btn-lg margin-bootom-xs" target="_blank" href="https://www.zamg.ac.at/cms/de/wetter/wetter-oesterreich/wien/">ZAMG Wien</a>
       </div>
     </div>
     
@@ -208,8 +208,14 @@
       </div>
       <div class="row margin-bottom-xs">
         <div class="col-sm-12 btn-group btn-group-justified">
-          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Internationales Covid19 Dashboard</a>
           <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://docs.google.com/spreadsheets/d/1PHThvZT-DDwd18op8MUde_EQpVASE4R74A_qzW2OfH8/htmlview">Covid19 Excel</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://covid19.geem.at/">Covid19 Dashboard</a>
+        </div>
+      </div>
+      <div class="row margin-bottom-xs">
+        <div class="col-sm-12 btn-group btn-group-justified">
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Internationales Covid19 Dashboard</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://covid19info.live/de/">Covid19 Info</a>
       </div>
   </div>
   <hr>
