--- a/primenumber/index.html
+++ b/primenumber/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8">
 	    <title>Primzahlen</title>
+		<!-- favicon -->
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+		<link rel="apple-touch-icon" href="favicon.png"/>
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="white">
