--- a/01209_cv_andreas_schweitzer/index.htm
+++ b/01209_cv_andreas_schweitzer/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <title>Lebenslauf von Andreas SCHWEITZER</title>
 <meta charset="UTF-8">
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-light-blue"></i>Berufserfahrung</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Senior Software Entwickler / <a href="http://www.bundesheer.at/" target="_blank">BMLV (Österreichisches Bundesheer)</a></b></h5>
+          <h5 class="w3-opacity"><b>Analytiker / <a href="http://www.bundesheer.at/" target="_blank">BMLV (Österreichisches Bundesheer)</a></b></h5>
           <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jän 2004 - <span class="w3-tag w3-light-blue w3-round">derzeit</span></h6>
           <p class="w3-margin-left">Projekt <b class="w3-bif">Phönix C2IS</b> - Führungs Information System des ÖBH</p>
           <ul class="w3-text-grey">
