--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <div class="btn-group pull-right">
           <!-- <div class="container"> -->
               <input class="btn btn-success col-sm-3" type="button" value="DDG" onclick="doSearch('https://duckduckgo.com/?q=')">
-              <input class="btn btn-success col-sm-3" type="button" value="QWant" onclick="doSearch('https://www.qwant.com/?t=all&q=')">
-              <input class="btn btn-success col-sm-3" type="button" value="Google" onclick="doSearch('https://www.google.at/search?q=')">
+              <input class="btn btn-success col-sm-3" type="button" value="Eco" onclick="doSearch('https://www.ecosia.org/search?q=')">
               <input class="btn btn-success col-sm-3" type="button" value="Bing" onclick="doSearch('https://www.bing.com/search?q=')">
+              <input class="btn btn-success col-sm-3" type="button" value="Google" onclick="doSearch('https://www.google.at/search?q=')">
           </div>
         </div>
       </div>
@@ -98,10 +98,11 @@
     </div>
     <div class="row">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.google.at/">Google</a>
-        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.bing.com/">Bing</a>
-        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.qwant.com/?l=de&h=0&hc=1&a=1&s=2&b=1&i=1&r=AT&sr=de">QWant</a>
         <a class="btn btn-primary btn-lg" target="_blank" href="https://duckduckgo.com/">Duckduckgo</a>
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.ecosia.org">Ecosia</a>
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.bing.com/">Bing</a>
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.google.at/">Google</a>
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.qwant.com/?l=de&h=0&hc=1&a=1&s=2&b=1&i=1&r=AT&sr=de">QWant</a>
       </div>
     </div>
     <hr>
@@ -208,14 +209,14 @@
       </div>
       <div class="row margin-bottom-xs">
         <div class="col-sm-12 btn-group btn-group-justified">
-          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://docs.google.com/spreadsheets/d/1PHThvZT-DDwd18op8MUde_EQpVASE4R74A_qzW2OfH8/htmlview">Covid19 Excel</a>
-          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://covid19.geem.at/">Covid19 Dashboard</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.corona-ampel.org/dashboard//">Corona-Ampel.org</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.wienerzeitung.at/coronakarten//">Wienerzeitung Dashboard</a>
         </div>
       </div>
       <div class="row margin-bottom-xs">
         <div class="col-sm-12 btn-group btn-group-justified">
-          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Internationales Covid19 Dashboard</a>
-          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://covid19info.live/de/">Covid19 Info</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://covid19.who.int/region/euro/country/at">WHO Covid19 Dashboard</a>
+          <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.bing.com/covid/local/austria">MSN Corona Tracker</a>
       </div>
   </div>
   <hr>
@@ -378,7 +379,7 @@ document.write(''
 </script>
 
     <hr>
-    <footer>&copy;2018 by Andreas Schweitzer</footer>
+    <footer>&copy;2018-2021 by Andreas Schweitzer</footer>
     <hr>
 </body>
 
