Lebenslauf verbessert (Kurse und Tagungen), mehr details

--- a/01209_cv_andreas_schweitzer/index.htm
+++ b/01209_cv_andreas_schweitzer/index.htm
@@ -11,6 +11,9 @@
 <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 <link rel="icon" href="img/favicon.png" type="image/png">
 <!--
+  <link rel='stylesheet' href='fonts/fa-solid-900.ttf'>
+  <link rel='stylesheet' href='fonts/fa-solid-900.woff'>
+  <link rel='stylesheet' href='fonts/fa-solid-900.woff2'>
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel='stylesheet' href='css/fa-5-all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>-->
 <style>
@@ -29,7 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container w3-center">
-          <img src="img/Andi.jpg" style="width:100%; max-width: 350px" alt="Andreas">
+          <img class="w3-circle" src="img/Andi.jpg" style="width:100%; max-width: 350px" alt="Andreas">
         </div>
         <div class="w3-container w3-text-grey" >
             <h2 class="">Andreas SCHWEITZER</h2>
@@ -73,6 +76,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-light-blue" style="width:75%">&nbsp</div>
           </div>
+          <p><i class="far fa-check-square w3-margin-right w3-text-light-blue"></i>IMB Ration Functional Tester</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-light-blue" style="width:60%">&nbsp</div>
+          </div>
+          <p><i class="far fa-map w3-margin-right w3-text-light-blue"></i>Openlayers, Leaflet</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-light-blue" style="width:65%">&nbsp</div>
+          </div>
+          <p><i class="far fa-handshake w3-margin-right w3-text-light-blue"></i>Projektentwicklung, Agile, Scrum</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-light-blue" style="width:58%">&nbsp</div>
+          </div>
+          
           
           <hr>
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-light-blue"></i>Sprachen</b></p>
@@ -107,7 +123,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-margin-left">Projekt <b class="w3-bif">Phönix C2IS</b> - Führungs Information System des ÖBH</p>
           <ul class="w3-text-grey">
             <li>Militärische Symbolik</li>
+            <ul class="w3-text-grey">
+              <li>Fachliche und technische Betreuung</li>
+              <li>Implementierung einer CI/CD Umgebung</li>
+              <li>Implementierung einer Datenbank mit Symboldaten</li>
+              <li>Implementierung einer Java-Komponente</li>
+              <li>Implementierung einer automatischen Testumgebung und Reporting</li>
+            </ul>
             <li>Militärische Geoinformatik</li>
+            <ul class="w3-text-grey">
+              <li>Implementierung und technische Betreuung eines Geoserver-Cluster</li>
+              <li>Einrichtung der Layer</li>
+              <li>Implementierung einer Webview</li>
+            </ul>
+            <li>Software Integration in das Unternehmensnetzwerk</li>
           <!--<li></li>-->
           </ul> 
           <hr>
@@ -115,7 +144,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Software Entwickler / Adecco</b></h5>
           <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2003 - Jän 2004</h6>
-          <p class="w3-margin-left">Externer Software Entwickler für BMLV (Österreichisches Bundesheer)</p>
+          <p class="w3-margin-left">Externer Softwareentwickler für das Bundesministerium für
+            Landesverteidigung (Österreichisches Bundesheer)</p>
           <hr>
         </div>
         <div class="w3-container">
@@ -127,6 +157,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <li>Modul Versand</li>
           <li>Modul Reporting</li>
           </ul> 
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Ferialpraktikant / CSC Austria</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>25.06.2001 – 20.07.2001</h6>
+          <p class="w3-margin-left">Ferialpraxis als Softwareentwickler</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Ferialpraktikant / Siemens AG</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>25.06.2001 – 20.07.2001</h6>
+          <p class="w3-margin-left">Ferialpraxis als Softwareentwickler</p>
+          <ul class="w3-text-grey">
+            <li>Adaptierung und Testung eines LED-Treibers für eine SDSL-Karte</li>
+            </ul>
           <br>
         </div>
       </div>
@@ -134,13 +179,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-school w3-margin-right w3-xxlarge w3-text-light-blue"></i>Ausbildung</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="http://www.spengergasse.at" target="_blank">HTL Spengergasse</a>, 1050 Wien</b></h5>
+          <h5 class="w3-opacity"><b>Tageskolleg für EDV und Organisation:</b> <br><a href="http://www.spengergasse.at" target="_blank">HTL Spengergasse 20</a>, 1050 Wien</h5>
           <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1999 - 2001</h6>
           <p><i class="fa fa-certificate fa-fw w3-text-light-blue w3-margin-right w3-margin-left"></i><b>Sep 2001:</b> Diplomprüfung mit gutem Erfolg bestanden.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Gymnasium: <a href="https://www.brigittenauer-gymnasium.at/" target="_blank">BG 20, Karajangasse</a>, 1200 Wien</b></h5>
+          <h5 class="w3-opacity"><b>Gymnasium:<br></b> <a href="https://www.gymnasium-am-augarten.at/" target="_blank">BG 20, Karajangasse 14</a>, 1200 Wien</b></h5>
           <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1991 - 1999</h6>
           <p><i class="fa fa-certificate fa-fw w3-text-light-blue w3-margin-right w3-margin-left"></i><b>Jun 1999:</b> Reifeprüfung mit ausgezeichnetem Erfolg bestanden.</p>
           <hr>
@@ -153,6 +198,87 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
       </div>
 
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-users fa-fw w3-margin-right w3-xxlarge w3-text-light-blue"></i>KONFERENZEN UND SEMINARE</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs "Secure Coding"</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>22.02.2017 – 24.02.2017 – FH Technikum Wien</h6>
+          <p class="w3-margin-left">von Ulrich Bayer von SBA Research</p>
+          <ul class="w3-text-grey">
+            <ul class="w3-text-grey">
+              <li>Update Kurs Teil 2 am 19.9.2018</li>
+              <li>Update Kurs Teil 3 am 26.9.2019</li>
+              <li>Update Kurs Teil 4 am 29.10.2020</li>
+            </ul>
+          <!--<li></li>-->
+          </ul> 
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs und Zertifizierung zum "Redhat Certified System
+            Administrator"</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>18.02.2019 – 22.02.2019 – ETC, Wien</h6>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>W-JAX 2019</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>05.11.2019 – 07.11.2019 – München</h6>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>W-JAX 2018</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06.11.2018 – 08.11.2018 – München</h6>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>JAX 2017</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.05.2017 – 11.05.2017 – Mainz</h6>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>JAX 2016</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>19.04.2016 – 21.04.2016 – Mainz</h6>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs "Java Performance Tuning"</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>16.12.2013 – 18.12.2013 – CIIT - javatraining.at, Wien</h6>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Workinggroup Meetings des Multilateral Interoperability
+            Programme (MIP)</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2004 – 2012 – Greding, Deutschland</h6>
+          <p>Teilnahme an technischen Arbeitsgruppen des Multilateral Interoperability
+          Programme (MIP) - <a href="https://mip.army.gr/">https://mip.army.gr/</a></p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs "Einführung in GeoServer"</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>03.04.2013 – Wien</h6>
+          <p>von Andreas Hocevar, Geospatial Solutions</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs Agile Softwareentwicklung</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>29.09.2015 – 01.10.2015 – Wien</h6>
+          <p>von Peter Hruschka</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs Requirements Engineering</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01.10.2014 – 03.10.2014 – Wien</h6>
+          <p>von Peter Hruschka</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs Angular Master Class</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>09.06.2015 – 11.06.2015 – Wien</h6>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kurs JavaScript und HTML5: Develop Web Applicatons</b></h5>
+          <h6 class="w3-text-light-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>14.03.2016 – 17.03.2016 – Wien</h6>
+          <hr>
+        </div>
+      </div>
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-swimmer w3-margin-right w3-xxlarge w3-text-light-blue"></i>Interessen</h2>
         <div class="w3-container">
@@ -192,7 +318,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
   -->
-  <p><i class="far fa-copyright"></i> 2019 by Andreas Schweitzer</p>
+  <p><i class="far fa-copyright"></i> 2019-2021 by Andreas Schweitzer</p>
   <p class="">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
