remove todo, upd index

--- a/index.html
+++ b/index.html
@@ -229,26 +229,26 @@
     <a class="btn btn-success btn-block btn-lg margin-bottom-xs" target="_blank" href="http://www.radio.at/">Radio.at</a>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://mp3stream7.apasf.apa.at/;?type=http&nocache=18478">Ö3 </a>
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://oe2w2shoutcast.sf.apa.at/;;">Radio Wien </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://orf-live.ors-shoutcast.at/oe3-q1a">Hitradio Ö3</a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://orf-live.ors-shoutcast.at/wie-q1a">Radio Wien</a>
       </div>
     </div>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-hd.mp3">Kronehit HD </a>
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-fresh.mp3">Kronehit Fresh </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://secureonair.krone.at/kronehit1058.mp3">Kronehit</a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://secureonair.krone.at/kronehit22.mp3">Kronehit Fresh </a>
       </div>
     </div>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-event.mp3">Kronehit Summer </a>
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-love.mp3">Kronehit Lovesongs </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://secureonair.krone.at/kronehit12.mp3">Kronehit Summer </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://secureonair.krone.at/kronehit14.mp3">Kronehit Lovesongs </a>
       </div>
     </div>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-greatesthits.mp3">Kronehit Greatest Hits </a>
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://raj.krone.at/kronehit-charts.mp3">Kronehit Charts </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://secureonair.krone.at/kronehit13.mp3">Kronehit Greatest Hits </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://secureonair.krone.at/kronehit99.mp3">Kronehit Charts </a>
       </div>
     </div>
     <div class="row margin-bottom-xs">
@@ -259,13 +259,13 @@
     </div>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://xapp2450489345c1000321.f.l.i.lb.core-cdn.net/1000321copo/live/app2450489345/w2445344770/live_de_96.mp3">88.6 der Musiksender </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://edge66.streamonkey.net/radio886-onair/stream/mp3?aggregator=radio_at_de_net">88.6 der Musiksender </a>
         <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://mp3channels.webradio.antenne.de/chillout">Antenne Bayern Chill Out </a>
       </div>
     </div>
     <div class="row margin-bottom-xs">
       <div class="col-sm-12 btn-group btn-group-justified">
-        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://online-radiorelax.tavrmedia.ua/RadioRelax">Radio Relax </a>
+        <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://radiorelax.stream.laut.fm/radio_relax?ref=radiode&t302=2022-06-16_17-38-26&uuid=9c70ab28-8650-4e7f-9815-a54c9c53c9f2">Radio Relax </a>
         <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://listen.radionomy.com/">Radio Nature</a>
       </div>
     </div>
